# FrackDB

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  biicode.conf
bii/: .hive.db  layout.bii
blocks/Towerism/FrackDB/: biicode.conf
ci/: fix_symlinks.sh  install_biicode.sh  install_lcov.sh  script.sh  upload_coverage.sh
cmake/: code_coverage.cmake  gtest.cmake
frackdb/: CMakeLists.txt  attribute_list.hh  relation.cc  relation.hh
frackdb/evaluation/: CMakeLists.txt  comparison.cc  comparison.hh  comparison_evaluator.hh  condition.cc  condition.hh  evaluate_comparison.cc  evaluate_comparison.hh  evaluate_condition_operand.hh  evaluator.hh  identifier.cc  identifier.hh  mpl_type_defs.hh  operator.hh  substitute.hh
frackdb/querying/: CMakeLists.txt  project.cc  project.hh  query.hh  select.cc  select.hh
frackdb/relation/: CMakeLists.txt  attribute.hh  attribute_list.cc  attribute_list.hh  index_mapper.cc  index_mapper.hh  integer_attribute.cc  integer_attribute.hh  mpl_type_defs.hh  names_extractor.cc  names_extractor.hh  primary_key_checker.cc  primary_key_checker.hh  relation.cc  relation.hh  row.cc  row.hh  row_checker.cc  row_checker.hh  var_char_attribute.cc  var_char_attribute.hh
frackdb/util/exception/: define_exception.hh
test/: CMakeLists.txt  test_relation.cc  test_stub.cc
test/integration/: CMakeLists.txt  test_stub.cc
test/unit/: CMakeLists.txt  test_attribute.cc  test_attribute_list.cc  test_comparison.cc  test_condition.cc  test_query.cc  test_relation.cc
